mini_template_macro/tests/create_modifier/optional_value_argument.rs
use mini_template_macro::create_modifier;

#[create_modifier]
fn modifier(value: Option<String>) -> String {
    todo!()
}

fn main() {}